# AJ-Audio-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/common_sources/: CMakeLists.txt  common_sources.cmake
cmake/common_test_sources/: common_test_sources.cmake
cmake/compiler_options/: CMakeLists.txt  compiler_options.cmake
cmake/ffmpeg/: ffmpeg.cmake
cmake/libsndfile/: CMakeLists.txt
cmake/port_audio/: port_audio.cmake
docs/: Architecture.md  AudioProcessing.md  ErrorHandling.md  FileIO.md  GettingStarted.md  README.md  TODO.md
include/: AJ_AudioEngine.h  AudioFile.h  WAV_File.h  aj_audio_engine.h  audio_file.h  mp3_file.h  wav_file.h
include/audio_io/: audio_io.h  audio_io_manager.h  play.h  record.h
include/core/: aj_audio_engine.h  buffer_pool.h  constants.h  effect_params.h  engine_resources.h  error_handler.h  errors.h  event_handler.h  globals.h  ring_buffer.h  thread_pool.h  types.h
include/dsp/: cut.h  distortion.h  echo.h  effect.h  fade.h  fadeIn.h  fadeOut.h  gain.h  mixer.h  normalization.h  pitchShift.h  reverb.h  reverse.h
include/dsp/reverb/: all_pass_filter.h  comb_filter.h  reverb.h
include/editing/: cut.h  insert.h
include/file_io/: audio_file.h  file_streamer.h  file_utils.h  mp3_file.h  wav_file.h
include/undo_system/: state.h  undo.h
src/: main.cc
src/audio_io/: record.cc
src/core/: aj_audio_engine.cc  buffer_pool.cc  ring_buffer.cc
src/dsp/: echo.cc
src/dsp/distortion/: distortion.cc
src/dsp/echo/: CMakeLists.txt  echo.cc  echo_avx.cc  echo_avx512.cc  echo_sse.cc
src/dsp/fade/: fade.cc  fade.cmake  fade_avx.cc
src/dsp/gain/: gain.cc  gain.cmake  gain_avx.cc
src/dsp/normalization/: gain.cc  gain_avx.cc  norm.cmake  normalization.cc
src/dsp/reverb/: all_pass_filter.cc  comb_filter.cc  reverb.cc
src/dsp/reverse/: reverse.cc
src/editing/: cut.cc  insert.cc
src/file_io/: audio_file.cc  file_streamer.cc  file_utils.cc  mp3_file.cc  wav_file.cc
src/io/: wav_file.cpp
test/: mp3_file_tests.cc  test.cc  test_read_wav.cc  wav_file_tests.cc
test/audio_io/: record_tests.cc
test/core/utils/: buffer_pool_tests.cc  ring_buffer_tests.cc  thread_pool_tests.cc
test/distortion/: distortion_tests.cc
test/echo/: echo_naive_tests.cc  echo_tests.cc
test/editing/cut/: cut_tests.cc
test/editing/insert/: insert_tests.cc
test/fade/: fade_tests.cc
test/file_io/: file_streamer_tests.cc  mp3_file_tests.cc  wav_file_tests.cc
test/gain/: gain_tests.cc
test/normalization/: norm_tests.cc
test/reverb/: reverb_tests.cc
test/reverse/: reverse_tests.cc
